# blog

./: .gitignore  404.html  Claude.md  README.md  hugo.toml  mkdocs.yml  new-post.sh  pyproject.toml
.github/workflows/: deploy.yml
Post/: 20260129_paradosso-ai-competenze_v01.0.md  20260130_home-assistant-20261_v01.0.md  20260130_selfhst-weekly-155_v01.0.md  20260202_openclaw-jarvis-realta_v01.0.md  20260205_search-engines-comparison_v01.0.md  20260205_tsidx-format_v01.0.md  OpenAI DevDay 2024_old.md
archetypes/: post.md
archive/2024/: index.html
assets/css/extended/: trek-theme.css
automation/: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  QUICKSTART.md  README.md  README_SIMPLE.md  TEST_INSTRUCTIONS.md  article_generator.py  check_status.sh  config.yaml.example  git_manager.py  ha_release_monitor.py  install_cron.sh  pyproject.toml  requirements.txt  setup.sh  test_system.py  test_with_mock_data.py
content/: about.md
content/posts/: 20260129_paradosso-ai-competenze_v01.0.md  20260130_home-assistant-20261_v01.0.md  20260202_home-assistant-20262_v01.0.md  20260203_openclaw-jarvis-realta_v01.0.md  20260205_search-engines-comparison_v01.0.md
docs/: .authors.yml  index.md
docs/posts/: Ai Winter is coming.md
site/: index.html
site/2024/10/02/openai-devday-2024/: index.html
site/2024/10/12/ai-winter-is-coming/: index.html
site/search/: search_index.json
