[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = [ "Davide Isoardi <davide@isoardi.info>",]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^9.5.13"
mkdocs-table-reader-plugin = "^2.1.0"
mkdocs-enumerate-headings-plugin = "^0.6.1"
pymdown-extensions = "^10.7.1"
openpyxl = "^3.1.2"
mkdocs-glightbox = "^0.3.7"
mkdocs-with-pdf = "^0.9.3"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"
typer = "^0.9.0"
rich = "^13.7.1"
