[tool.poetry]
name = "ha-monitor"
version = "0.1.0"
description = ""
authors = ["abacus <davide@isoardi.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
pyyaml = "^6.0.3"
lxml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
